--- a/ViewRental.html
+++ b/ViewRental.html
@@ -7,15 +7,17 @@
 <body>
 <h1>Se detaljer om udlejningen</h1>
 
-<span th:text="${rental.rental_id}"/>
-<span th:text="${rental.documentation_id}"/>
-<span th:text="${rental.customer_id}"/>
-<span th:text="${rental.days_of_rental}"/>
-<span th:text="${rental.total_price}"/>
-<span th:text="${rental.rent_table}"/>
-<span th:text="${rental.rent_chairs}"/>
-<span th:text="${rental.rent_car_seat}"/>
-<span th:text="${rental.rent_bike_rack}"/>
-<span th:text="${rental.rent_bed_linnen}"/>
+<span th:text="${rent.rental_id}"/>
+<span th:text="${rent.documentation_id}"/>
+<span th:text="${rent.customer_id}"/>
+<span th:text="${rent.days_of_rental}"/>
+<span th:text="${rent.total_price}"/>
+<span th:text="${rent.rent_table}"/>
+<span th:text="${rent.rent_chairs}"/>
+<span th:text="${rent.rent_car_seat}"/>
+<span th:text="${rent.rent_bike_rack}"/>
+<span th:text="${rent.rent_bed_linnen}"/>
+<span th:text="${pickUp.place}"/>
+<span th:text="${dropOf.place}"/>
 </body>
 </html>
