--- a/viewOneCustomer.html
+++ b/viewOneCustomer.html
@@ -6,21 +6,24 @@
     <link rel="stylesheet" type="text/css" href="/NMP.css">
 </head>
 <body>
-<h1 style="margin-left: 40%; margin-top: 3%;">Medarbejder detaljer</h1>
+
+<h1 style="margin-left: 40%; margin-top: 3%;">Kunde detaljer</h1>
 <div class="wrapper" id="wrapper-view">
 <table>
     <thead>
     <tr>
-        <th>Medarbejder ID</th>
+        <th>Kunde ID</th>
         <th>Fornavn</th>
         <th>Efternavn</th>
+        <th>Kørekort</th>
         <th></th>
     </tr>
     </thead>
     <tbody>
-        <td th:text="${staff_id}" />
-        <td th:text="${staff.staff_first_name}" />
-        <td th:text="${staff.staff_last_name}" />
+        <td th:text="${customer.customer_id}"/>
+        <td th:text="${customer.cus_first_name}"/>
+        <td th:text="${customer.cus_last_name}"/>
+        <td th:text="${customer.driver_licence}"/>
     </tbody>
 
     <thead>
@@ -34,12 +37,11 @@
     </thead>
 
     <tbody>
-    <td th:text="${staff.street}" />
-    <td th:text="${staff.house_num}" />
-    <td th:text="${staff.city}" />
-    <td th:text="${staff.zip_code}" />
+    <td th:text="${customer.street}"/>
+    <td th:text="${customer.house_num}"/>
+    <td th:text="${customer.city}"/>
+    <td th:text="${customer.zip_code}"/>
     </tbody>
-
 </table>
 </div>
 
