--- a/createCar.html
+++ b/createCar.html
@@ -41,6 +41,10 @@
                 <input style="float:right;" type="number" name="mileage" placeholder="101010" pattern="((?=.*\d).{1,}}" title="Indtast min. 1 tal">
                 <br><hr class="line">
 
+                <label>Price id:</label>
+                <input style="float:right;" type="number" name="price_id" placeholder="0" pattern="((?=.*\d).{1}}" title="Indtast min. 1 tal">
+                <br><hr class="line">
+
                 <input style="background-color: cyan; float: right;" type="submit" value="Opret bilen">
             </form>
         </div>
