--- a/index.html
+++ b/index.html
@@ -44,11 +44,11 @@
                 <button class="btn-viewOne", id="btn-viewOne">Se detaljer</button>
             </a>
 
-            <a th:href="@{'/delete/'+${r.rental_id}}">
+            <a th:href="@{'/deleteRental/'+${r.rental_id}}">
                 <button class="btn-delete", id="btn-delete">Slet udlejning</button>
             </a>
 
-            <a th:href="@{'/update/'+${r.rental_id}}">
+            <a th:href="@{'/updateRental/'+${r.rental_id}}">
                 <button class="btn-update", id="btn-update">Opdater oplysninger</button>
             </a>
 
