--- a/createRental.html
+++ b/createRental.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Opret udlejning</title>
-    <link rel="stylesheet" type="text/css" href="/static/NMP.css">
+    <link rel="stylesheet" type="text/css" href="/NMP.css">
 </head>
 <body>
     <h1 style="margin-left: 40%; margin-top: 3%;">Opret en udlejning</h1>
@@ -23,10 +23,10 @@
                 <br><hr class="line">
 
                 <label>Dato fra:</label>
-                <input style="float: right" type="text" name="from_date" placeholder="yyyy-mm-dd" pattern="[0-9]{4}-[0-9]{2}-[0-9]{2}" title="Indtast somg følgende yyyy-mm-dd">
+                <input style="float: right" type="text" name="from_Date" placeholder="yyyy-mm-dd" pattern="[0-9]{4}-[0-9]{2}-[0-9]{2}" title="Indtast somg følgende yyyy-mm-dd">
                 <br><hr class="line">
                 <label>Dato til:</label>
-                <input style="float: right" type="text" name="to_date" placeholder="yyyy-mm-dd" pattern="[0-9]{4}-[0-9]{2}-[0-9]{2}" title="Indtast somg følgende yyyy-mm-dd">
+                <input style="float: right" type="text" name="to_Date" placeholder="yyyy-mm-dd" pattern="[0-9]{4}-[0-9]{2}-[0-9]{2}" title="Indtast somg følgende yyyy-mm-dd">
                 <br><hr class="line">
 
                 <label>Vil du leje et picnic bord?</label>
