--- a/createRental.html
+++ b/createRental.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Opret udlejning</title>
-    <link rel="stylesheet" type="text/css" href="/NMP.css">
+    <link rel="stylesheet" type="text/css" href="/static/NMP.css">
 </head>
 <body>
     <h1 style="margin-left: 40%; margin-top: 3%;">Opret en udlejning</h1>
